# remotia-ffmpeg-codecs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/h264_screen_mirror/: main.rs  types.rs
src/: builder.rs  lib.rs  scaling.rs
src/decoders/: h264.rs  hevc.rs  libvpx_vp9.rs  mod.rs  puller.rs  pusher.rs  utils.rs
src/decoders/h264/: mod.rs  puller.rs  pusher.rs
src/decoders/utils/: avframe.rs  mod.rs  old.rs  packet.rs  yuv2bgr.rs
src/encoders/: libvpx_vp9.rs  mod.rs  options.rs  puller.rs  pusher.rs  x264.rs  x265.rs
src/encoders/fillers/: mod.rs  rgba.rs  yuv420p.rs
src/encoders/frame_builders/: yuv420p.rs
src/encoders/utils/: avframe.rs  mod.rs  packet.rs  pull.rs  push.rs
src/encoders/utils/frame_builders/: mod.rs  yuv420p.rs
src/encoders/x264/: mod.rs  puller.rs  pusher.rs
utils/: env.sh  linux_ffmpeg.rs  windows_ffmpeg.rs
