[package]
name = "remotia-ffmpeg-codecs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies.remotia]
path = "../remotia"
features = ["buffers"]

[dependencies]
rsmpeg = "0.14.1+ffmpeg.6.0"
env_logger = "0.10.0"
log = "0.4.14"

async-trait = "0.1.68"
bytes = "1.1.0"

cstr = "0.2.9"

bincode = "1.3.3"

