[package]
name = "remotia-ffmpeg-codecs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.remotia]
path = "../remotia"
features = ["buffers", "capture", "codecs", "render"]

[dependencies]
rsmpeg = "0.14.1+ffmpeg.6.0"
bytes = "1.4.0"
env_logger = "0.10.0"
log = "0.4.14"
async-trait = "0.1.68"
clap = { version = "4.3.2", features = ["derive"] }
cstr = "0.2.11"
