[package]
name = "remotia-ffmpeg-codecs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.remotia]
# git = "https://github.com/remotia/remotia"
# branch = "generic_data"
path = "../remotia/remotia"
default-features = false
features = ["buffers", "render"]

[dependencies]
rsmpeg = { version = "0.14.1+ffmpeg.6.0", features = ["ffmpeg5"]}
env_logger = "0.10.0"
log = "0.4.14"
async-trait = "0.1.68"
clap = { version = "4.3.2", features = ["derive"] }
cstr = "0.2.11"
